# machine-lab

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  devenv.nix  package-lock.json  package.json  wrangler.toml
.github/workflows/: docs.yml  release.yml
common/: lcom_protocol.h
course/: LICENSE.md  README.md
course/labs/: function-requests.json
course/labs/docs/: lab1-bitwise-rtc.md  lab2-timer.md  lab3-keyboard.md  lab4-mouse.md  lab5-video.md  lab6-audio.md  lab7-uart.md
course/labs/templates/lab2/include/: timer_lib.h
course/labs/templates/lab7/include/: uart_lib.h
dev/lab-solutions/lab1/src/: bitwise.c  rtc_lib.c
dev/lab-solutions/lab3/src/: keyboard_lib.c
dev/lab-solutions/lab4/src/: mouse_lib.c
dev/lab-tests/: lab2_test.c  lab4_test.c  lab5_test.c  lab7_test.c  lab_test.h
docs/: adoption.md  architecture.md  developer-guide.md  from-minix.md  getting-started.md  index.md  instructor-guide.md  roadmap.md  runtime-and-cli.md  student-guide.md  video-demo.md
docs-site/: index.md
docs-site/.vitepress/: config.mts
docs-site/.vitepress/theme/: custom.css
docs-site/developers/: architecture.md  docs-site.md  from-minix.md  index.md  releases.md  runtime-cli.md
docs-site/examples/: index.md  ninjix.md
docs-site/instructors/: adoption.md  index.md  rubric.md  syllabus.md
docs-site/labs/: index.md
docs-site/labs/lab1/: bitwise.md  check.md  context.md  index.md  io-ports.md  modern.md  rtc.md  tasks.md
docs-site/labs/lab2/: check.md  context.md  index.md  interrupts.md  library.md  modern.md  programming.md  tasks.md  timer-controller.md
docs-site/labs/lab3/: check.md  context.md  index.md  kbc-commands.md  keyboard.md  modern.md  multiple-devices.md  scancodes.md  sync.md  tasks.md
docs-site/labs/lab4/: check.md  context.md  index.md  modern.md  mouse-controller.md  packets.md  tasks.md
docs-site/labs/lab5/: check.md  context.md  index.md  modern.md  reactive-apps.md  rectangles.md  tasks.md  vbe.md  video-card.md  vram.md  xpm.md
docs-site/labs/lab6/: check.md  index.md  modern.md  pcm.md  tasks.md
docs-site/labs/lab7/: check.md  index.md  modern.md  protocols.md  tasks.md
docs-site/students/: index.md
docs/assets/demo/: README.md
examples/: README.md  audio_tone.c  breakout_demo.c  example_ui.h  hello.c  keyboard_scan.c  mouse_packet.c  music_maker.c  rtc_date.c  sdl_demo.c  timer_int.c  uart_loopback.c  uart_pair.c  uart_peer_receiver.c  uart_peer_sender.c  vbe_rectangle.c  word_processor.c
examples/flappy/: app.c  app.h  assets.h  font.c  font.h  main.c  menu.c  menu.h  renderer.c  renderer.h  sound.c  sound.h
examples/ninjix/: app.c
include/lcom/: ac97.h  i8042.h  i8254.h  lcom.h  rtc.h  uart16550.h  vbe.h
labs/: README.md  function-requests.json
labs/docs/: lab1-bitwise-rtc.md  lab2-timer.md  lab3-keyboard.md  lab4-mouse.md  lab5-video.md  lab6-audio.md  lab7-uart.md
labs/solutions/lab1/include/: bitwise.h
labs/solutions/lab2/src/: timer_lib.c
labs/solutions/lab3/include/: keyboard_lib.h
labs/solutions/lab3/src/: keyboard_lib.c
labs/solutions/lab4/include/: mouse_lib.h
labs/solutions/lab5/include/: video_lib.h
labs/solutions/lab5/src/: video_lib.c
labs/solutions/lab6/include/: audio_lib.h
labs/solutions/lab6/src/: audio_lib.c
labs/solutions/lab7/src/: uart_lib.c
labs/templates/lab1/include/: rtc_lib.h
liblcom/src/: lcom.c
media/remotion/: package-lock.json  package.json  skills-lock.json  tsconfig.json
media/remotion/scripts/: sync_assets.sh
media/remotion/src/: Root.tsx  Video.tsx
runtime/: main.cpp
runtime/backends/: AudioBackend.cpp  AudioBackend.hpp  DisplayBackend.hpp  HeadlessDisplay.hpp  SdlAudioBackend.cpp  SdlAudioBackend.hpp  SdlBackend.cpp  SdlBackend.hpp
runtime/cli/: FileOps.cpp  FileOps.hpp  LabCatalog.cpp  LabCatalog.hpp
runtime/core/: Bus.cpp  Bus.hpp  IrqController.cpp  IrqController.hpp  Machine.cpp  Machine.hpp  MousePacketScheduler.hpp  PairRuntimeServer.cpp  PairRuntimeServer.hpp  PortDevice.hpp  ProtocolIO.hpp  RuntimeServer.cpp  RuntimeServer.hpp  Script.cpp  Script.hpp  Trace.cpp  Trace.hpp
runtime/devices/: Ac97.cpp  Ac97.hpp  I8042.cpp  I8042.hpp  Pit8254.cpp  Pit8254.hpp  RtcCmos.cpp  RtcCmos.hpp  Uart16550.cpp  Uart16550.hpp  Vbe.cpp  Vbe.hpp
scripts/: breakout_demo.mlabscript  capture_marketing_examples.sh  check_docs_site.sh  demo_exit.mlabscript  esc.lcomscript  flappy_caption_demo.mlabscript  flappy_demo.mlabscript  flappy_mouse_demo.lcomscript  flappy_mouse_stress.lcomscript  flappy_space_stress.mlabscript  generate_lab_catalog.cmake  mouse_move.mlabscript  music_maker_demo.mlabscript  ninjix_level1_demo.mlabscript  ninjix_menu_exit.mlabscript  pvz_menu_exit.mlabscript  render_public_demo.sh  sync_docs_site_assets.sh  type_a_esc.mlabscript  write_note.mlabscript
sdk/client/src/: lcom.c
sdk/include/lcom/: ac97.h  i8042.h  i8254.h  lcom.h  rtc.h  uart16550.h  vbe.h
tests/: client_protocol_tests.c  integration.sh  unit_tests.cpp
tests/labs/: lab1_test.c  lab3_test.c  lab6_test.c  lab_test.h
